fix: overflow

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow-x: hidden;
+  padding: 0px 8px;
 }
 
 body {
